<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">School</string>
    <string name="splash_app_name">My School</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="exam">Exam</string>
    <string name="event">Event</string>
    <string name="holiday">Holiday</string>

    <!-- Authentication Activity -->
    <string name="auth_title">Select School</string>
    <string name="btn_auth_submit">Submit</string>
    <string name="forgot_title">Forgot</string>
    <string name="forgot_email_hint">Enter Email or Mobile-no</string>
    
    <!-- Login Activity -->
    <string name="login_title">Login</string>
    <string name="btn_login_submit">Login</string>
    <string name="tv_reg_link">Forgot Passowrd ??</string>
    <string name="email">Enter Email or Mobile-no</string>
    <string name="password">Enter Password</string>

    <!-- Student Corner Fragment -->
    <string name="title_student_corner">Student Corner</string>
    <string name="lbl_name">Name:</string>
    <string name="lbl_roll_no">Roll Number:</string>
    <string name="lbl_contact_no">Contact Number:</string>
    <string name="btn_view_test">View Test</string>
    <string name="btn_exam">Exam</string>
    <string name="btn_topic">Topic</string>
    <string name="btn_remark">Remark</string>

     <!-- Leaderboard Fragment -->
    <string name="title_subject">Subject</string>
    <string name="title_rank">Rank</string>
    <string name="btn_rank">Rank</string>
    <string name="btn_subject">Subject</string>    
    
    <!-- navigation drawer item image -->
    <integer-array name="nav_drawer_image">
        <item>@drawable/ic_notice</item>
        <item>@drawable/ic_attendance</item>
        <item>@drawable/ic_studentcorner</item>
        <item>@drawable/ic_test</item>
        <item>@drawable/ic_exam</item>
        <item>@drawable/ic_topic</item>
        <item>@drawable/ic_note</item>
        <item>@drawable/ic_leaderboard</item>
        <item>@drawable/ic_info</item>
        <item>@drawable/ic_logout</item>
    </integer-array>

    <!-- navigation drawer item labels -->
    <string-array name="nav_drawer_labels">
        <item>Notice</item>
        <item>Attendance</item>
        <item>Student Corner</item>
        <item>View Test</item>
        <item>Exam</item>
        <item>Topic</item>
        <item>Remark</item>
        <item>Leaderboard</item>
        <item>About</item>
        <item>Logout</item>
    </string-array>

    <string name="city_txt">Select City</string>
    <string name="school_txt">Select School</string>
    <string name="title_notice">Notice</string>
    <string name="title_attendence">Attendence</string>
    <string name="title_testview">Test</string>
    <string name="title_exam">Exam</string>
    <string name="title_topic">Topic</string>
    <string name="title_remark">Remark</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="dialog_title">Please enter valid event name</string>
    <string name="hint_event_title">Event Title</string>
    <string name="hint_event_desc">Event Description</string>
    <string name="error_event_title">Please enter valid event name</string>
    <string name="error_event_type">Please select type</string>
    <string name="error_event_desc">Please enter valid event description</string>

</resources>