<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_std_pic"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/demo" />

            <LinearLayout
                android:id="@+id/layout_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_toRightOf="@+id/iv_std_pic"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lbl_std_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_name"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_std_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Aditi Patel" />

                <TextView
                    android:id="@+id/lbl_std_rollno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_roll_no"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_std_rollno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="28" />

                <TextView
                    android:id="@+id/lbl_std_contact_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lbl_contact_no"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_std_contact_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="+91 98xxxxxxxx" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_std_pic"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="25dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_view_test"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:padding="12dp"
                    android:text="@string/btn_view_test"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_exam"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:padding="12dp"
                    android:text="@string/btn_exam"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_topic"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:padding="12dp"
                    android:text="@string/btn_topic"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_remark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:padding="12dp"
                    android:text="@string/btn_remark"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>