<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <com.example.school.customcalendar.CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/layoutExam"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendar_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/iv_exam"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/bg_event_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/exam"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutExam"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp" >

        <ImageView
        android:id="@+id/iv_event"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/bg_event_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/event"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHoliday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutEvent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp" >

        <ImageView
        android:id="@+id/iv_holiyday"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/bg_event_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/holiday"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />
    </LinearLayout>

</RelativeLayout>